[tool.poetry]
name = "starbucks-botdetection-cracked"
version = "0.1.0"
description = ""
authors = ["Daniel Graña <dangra@gmail.com>"]

[tool.poetry.dependencies]
python = ">=2.7, <3.0.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
